--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.14",
     "expo-camera": "^14.1.1",
     "expo-local-authentication": "~13.8.0",
