--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "expo": "~50.0.14",
     "expo-camera": "^14.1.1",
     "expo-local-authentication": "~13.8.0",
+    "expo-location": "^16.5.5",
     "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-maps": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
