--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Aula2",
-    "slug": "Aula2",
+    "name": "Univassouras",
+    "slug": "Univassouras",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo-da-univassouras.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/logo-branca-da-univassouras.png",
