--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.14",
     "expo-camera": "^14.1.1",
@@ -17,8 +18,10 @@
     "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.6",
-    "react-native-maps": "^1.13.0"
+    "react-native-maps": "^1.13.0",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
