--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
     "expo-camera": "^14.1.1",
     "expo-local-authentication": "~13.8.0",
     "expo-location": "^16.5.5",
     "expo-media-library": "^15.9.1",
+    "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-maps": "^1.13.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
