--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
+    "react-native-image-base64": "^0.1.4",
     "react-native-maps": "^1.13.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "expo-image-manipulator": "~11.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
